Brain-BT/force-app/main/default/objects/Account/fields/Account_Setup_in_Accounting_System__c.field-meta.xml
<CustomField>
    <fullName>Account_Setup_in_Accounting_System__c</fullName>
    <label>Account Setup in Accounting System?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>