Brain-BT/force-app/main/default/objects/Account/fields/Agreement_Day__c.field-meta.xml
<CustomField>
    <fullName>Agreement_Day__c</fullName>
    <label>Agreement Day</label>
    <length>255</length>
    <type>Text</type>
</CustomField>