Brain-BT/force-app/main/default/objects/Account/fields/Agreement_Month__c.field-meta.xml
<CustomField>
    <fullName>Agreement_Month__c</fullName>
    <label>Agreement Month</label>
    <length>255</length>
    <type>Text</type>
</CustomField>