Brain-BT/force-app/main/default/objects/Account/fields/Automobile_Liability_Expiration_Date__c.field-meta.xml
<CustomField>
    <fullName>Automobile_Liability_Expiration_Date__c</fullName>
    <inlineHelpText>Date the Vendor&apos;s Automotive Liability policy expires.</inlineHelpText>
    <label>Automobile Liability Expiration Date</label>
    <type>Date</type>
</CustomField>