Brain-BT/force-app/main/default/objects/Account/fields/Bid_Rating_Star__c.field-meta.xml
<CustomField>
    <fullName>Bid_Rating_Star__c</fullName>
    <formula>IMAGE( 
IF(((Total_Rating__c*100) &gt;= 90), &quot;/img/samples/stars_500.gif&quot;, 
IF(((Total_Rating__c*100) &gt;= 80 &amp;&amp; Total_Rating__c &lt; 90), &quot;/img/samples/stars_400.gif&quot;, 
IF(((Total_Rating__c*100) &gt;= 70 &amp;&amp; Total_Rating__c &lt; 80), &quot;/img/samples/stars_300.gif&quot;, 
IF(((Total_Rating__c*100) &gt;= 60 &amp;&amp; Total_Rating__c &lt; 70), &quot;/img/samples/stars_200.gif&quot;, 
IF(((Total_Rating__c*100) &lt; 60), &quot;/img/samples/stars_100.gif&quot;, &quot;/img/samples/stars_000.gif&quot; 
))))), 
&quot;Rating&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Vendor Rating</label>
    <type>Text</type>
</CustomField>