Brain-BT/force-app/main/default/objects/Account/fields/Box_Folder_Id__c.field-meta.xml
<CustomField>
    <fullName>Box_Folder_Id__c</fullName>
    <label>Box Folder Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>