Brain-BT/force-app/main/default/objects/Account/fields/BT_Account_Type__c.field-meta.xml
<CustomField>
    <fullName>BT_Account_Type__c</fullName>
    <label>BT Account Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Customer</fullName>
                <default>true</default>
                <label>Customer</label>
            </value>
            <value>
                <fullName>LOB</fullName>
            </value>
            <value>
                <fullName>Master</fullName>
            </value>
            <value>
                <fullName>Realtor</fullName>
            </value>
            <value>
                <fullName>Standard</fullName>
            </value>
            <value>
                <fullName>Supplier</fullName>
            </value>
            <value>
                <fullName>Vendor</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>