Brain-BT/force-app/main/default/objects/Account/fields/Commercial_GL_Expiration_Date__c.field-meta.xml
<CustomField>
    <fullName>Commercial_GL_Expiration_Date__c</fullName>
    <inlineHelpText>Date the Vendor&apos;s General Liability Insurance Expires.</inlineHelpText>
    <label>Commercial GL Expiration Date</label>
    <type>Date</type>
</CustomField>