Brain-BT/force-app/main/default/objects/Account/fields/Contract_Signed__c.field-meta.xml
<CustomField>
    <fullName>Contract_Signed__c</fullName>
    <label>Contract Signed</label>
    <type>Date</type>
</CustomField>