Brain-BT/force-app/main/default/objects/Account/fields/Contractor_License__c.field-meta.xml
<CustomField>
    <fullName>Contractor_License__c</fullName>
    <label>Contractor License</label>
    <length>255</length>
    <type>Text</type>
</CustomField>