Brain-BT/force-app/main/default/objects/Account/fields/Contractor_Signed_date__c.field-meta.xml
<CustomField>
    <fullName>Contractor_Signed_date__c</fullName>
    <label>Contractor Signed date</label>
    <type>Date</type>
</CustomField>