Brain-BT/force-app/main/default/objects/Account/fields/Contractor_Signed_datetime__c.field-meta.xml
<CustomField>
    <fullName>Contractor_Signed_datetime__c</fullName>
    <label>Contractor Signed date</label>
    <type>DateTime</type>
</CustomField>