Brain-BT/force-app/main/default/objects/Account/fields/Correspondence__c.field-meta.xml
<CustomField>
    <fullName>Correspondence__c</fullName>
    <label>Correspondence:</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>