Brain-BT/force-app/main/default/objects/Account/fields/Cost_Code__c.field-meta.xml
<CustomField>
    <fullName>Cost_Code__c</fullName>
    <label>Cost Code</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>