Brain-BT/force-app/main/default/objects/Account/fields/Employers_Liability_Expiration_Date__c.field-meta.xml
<CustomField>
    <fullName>Employers_Liability_Expiration_Date__c</fullName>
    <inlineHelpText>Date the Vendor&apos;s Employer Liability policy expires.</inlineHelpText>
    <label>Employers Liability Expiration Date</label>
    <type>Date</type>
</CustomField>