Brain-BT/force-app/main/default/objects/Account/fields/Fully_Executed_Date__c.field-meta.xml
<CustomField>
    <fullName>Fully_Executed_Date__c</fullName>
    <label>Fully Executed Date</label>
    <type>DateTime</type>
</CustomField>