Brain-BT/force-app/main/default/objects/Account/fields/General_Liability_License_Expiration__c.field-meta.xml
<CustomField>
    <fullName>General_Liability_License_Expiration__c</fullName>
    <label>General Liability License Expiration</label>
    <type>Date</type>
</CustomField>