Brain-BT/force-app/main/default/objects/Account/fields/Insurance__c.field-meta.xml
<CustomField>
    <fullName>Insurance__c</fullName>
    <formula>IF((!ISBLANK( License_Expiration__c )  &amp;&amp; License_Expiration__c &lt; TODAY() ),&quot;Expired&quot;,&quot; &quot; )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Insurance</label>
    <type>Text</type>
</CustomField>