Brain-BT/force-app/main/default/objects/Account/fields/Insurance_Policy_Notes__c.field-meta.xml
<CustomField>
    <fullName>Insurance_Policy_Notes__c</fullName>
    <inlineHelpText>Track specific notes for this Vendor&apos;s insurance policies.</inlineHelpText>
    <label>Insurance Policy Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>