Brain-BT/force-app/main/default/objects/Account/fields/Is_Contract_Signed__c.field-meta.xml
<CustomField>
    <fullName>Is_Contract_Signed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Contract Signed</label>
    <type>Checkbox</type>
</CustomField>