Brain-BT/force-app/main/default/objects/Account/fields/License_Expiration__c.field-meta.xml
<CustomField>
    <fullName>License_Expiration__c</fullName>
    <inlineHelpText>Date the Vendors license expires.</inlineHelpText>
    <label>License Expiration</label>
    <type>Date</type>
</CustomField>