Brain-BT/force-app/main/default/objects/Account/fields/Match_Level__c.field-meta.xml
<CustomField>
    <fullName>Match_Level__c</fullName>
    <label>Match Level</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Invoice</fullName>
            </value>
            <value>
                <fullName>Purchase Order</fullName>
            </value>
            <value>
                <fullName>Invoice &amp; Purchase Order</fullName>
            </value>
            <value>
                <fullName>Bill of Lading</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>