Brain-BT/force-app/main/default/objects/Account/fields/Office_Address__c.field-meta.xml
<CustomField>
    <fullName>Office_Address__c</fullName>
    <label>Office Address</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>