Brain-BT/force-app/main/default/objects/Account/fields/Pay_Percentage_1__c.field-meta.xml
<CustomField>
    <fullName>Pay_Percentage_1__c</fullName>
    <label>Pay Percentage #1</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>