Brain-BT/force-app/main/default/objects/Account/fields/Pre_Qual_Contact__c.field-meta.xml
<CustomField>
    <fullName>Pre_Qual_Contact__c</fullName>
    <label>Pre Qual Contact</label>
    <length>255</length>
    <type>Text</type>
</CustomField>