Brain-BT/force-app/main/default/objects/Account/fields/ProjectId__c.field-meta.xml
<CustomField>
    <fullName>ProjectId__c</fullName>
    <label>ProjectId</label>
    <length>255</length>
    <type>Text</type>
</CustomField>