Brain-BT/force-app/main/default/objects/Account/fields/Qualification_Date__c.field-meta.xml
<CustomField>
    <fullName>Qualification_Date__c</fullName>
    <label>Qualification Date</label>
    <type>DateTime</type>
</CustomField>