Brain-BT/force-app/main/default/objects/Account/fields/Qualification_Stage__c.field-meta.xml
<CustomField>
    <fullName>Qualification_Stage__c</fullName>
    <label>Qualification Stage</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Not Qualified</fullName>
                <default>true</default>
                <label>Not Qualified</label>
            </value>
            <value>
                <fullName>Email Sent</fullName>
            </value>
            <value>
                <fullName>Email Received</fullName>
            </value>
            <value>
                <fullName>Qualified</fullName>
            </value>
            <value>
                <fullName>Rejected</fullName>
            </value>
            <value>
                <fullName>MSA Sent</fullName>
            </value>
            <value>
                <fullName>MSA Signed</fullName>
            </value>
            <value>
                <fullName>MSA Rejected</fullName>
            </value>
            <value>
                <fullName>Fully Executed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>