Brain-BT/force-app/main/default/objects/Account/fields/Rejection_Date__c.field-meta.xml
<CustomField>
    <fullName>Rejection_Date__c</fullName>
    <inlineHelpText>Date the Vendor was rejected during the Pre-Qualification process.</inlineHelpText>
    <label>Rejection Date</label>
    <type>DateTime</type>
</CustomField>