Brain-BT/force-app/main/default/objects/Account/fields/Remit_Address__c.field-meta.xml
<CustomField>
    <fullName>Remit_Address__c</fullName>
    <label>Remit To:</label>
    <length>500</length>
    <type>LongTextArea</type>
</CustomField>