Brain-BT/force-app/main/default/objects/Account/fields/Resend_MSA_Count__c.field-meta.xml
<CustomField>
    <fullName>Resend_MSA_Count__c</fullName>
    <label>Resend Pre-Qual Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>