Brain-BT/force-app/main/default/objects/Account/fields/Sender_Email_Response__c.field-meta.xml
<CustomField>
    <fullName>Sender_Email_Response__c</fullName>
    <label>Sender Email Response</label>
    <length>50</length>
    <type>Text</type>
</CustomField>