Brain-BT/force-app/main/default/objects/Account/fields/Simultaneous_Tasks__c.field-meta.xml
<CustomField>
    <fullName>Simultaneous_Tasks__c</fullName>
    <inlineHelpText>This field reflects the number of scheduled tasks that a Contact/Resource can work on at a single time.  If the contact/resource is assigned to more tasks than this value the Schedule Dashboard will reflect a conflict.</inlineHelpText>
    <label>Simultaneous Tasks</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>