Brain-BT/force-app/main/default/objects/Account/fields/State1__c.field-meta.xml
<CustomField>
    <fullName>State1__c</fullName>
    <label>State1</label>
    <length>255</length>
    <type>Text</type>
</CustomField>