Brain-BT/force-app/main/default/objects/Account/fields/State2__c.field-meta.xml
<CustomField>
    <fullName>State2__c</fullName>
    <label>State2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>