Brain-BT/force-app/main/default/objects/Account/fields/State3__c.field-meta.xml
<CustomField>
    <fullName>State3__c</fullName>
    <label>State3</label>
    <length>255</length>
    <type>Text</type>
</CustomField>