Brain-BT/force-app/main/default/objects/Account/fields/Sub_Contractor_Signed_Date__c.field-meta.xml
<CustomField>
    <fullName>Sub_Contractor_Signed_Date__c</fullName>
    <label>Sub Contractor Signed Contract Date</label>
    <type>DateTime</type>
</CustomField>