Brain-BT/force-app/main/default/objects/Account/fields/Sub_Contractor_Vendor_Name__c.field-meta.xml
<CustomField>
    <fullName>Sub_Contractor_Vendor_Name__c</fullName>
    <label>Sub Contractor Vendor Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>