Brain-BT/force-app/main/default/objects/Account/fields/Total_Rating__c.field-meta.xml
<CustomField>
    <fullName>Total_Rating__c</fullName>
    <inlineHelpText>Rating is driven from Vendor Reviews.</inlineHelpText>
    <label>Rating</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>