Brain-BT/force-app/main/default/objects/Account/fields/Trade_Type_Lookup__c.field-meta.xml
<CustomField>
    <fullName>Trade_Type_Lookup__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>The type of Trade the Vendor or Supplier works in.</inlineHelpText>
    <label>Trade Type</label>
    <referenceTo>Trade_Type__c</referenceTo>
    <relationshipLabel>Accounts</relationshipLabel>
    <relationshipName>Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>