Brain-BT/force-app/main/default/objects/Account/fields/Type_of_Company__c.field-meta.xml
<CustomField>
    <fullName>Type_of_Company__c</fullName>
    <label>Type of Company</label>
    <length>255</length>
    <type>Text</type>
</CustomField>