Brain-BT/force-app/main/default/objects/Account/fields/Union_Rates__c.field-meta.xml
<CustomField>
    <fullName>Union_Rates__c</fullName>
    <label>Union Rates</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>