Brain-BT/force-app/main/default/objects/Account/fields/Vendor_License__c.field-meta.xml
<CustomField>
    <fullName>Vendor_License__c</fullName>
    <label>Vendor License Number 1</label>
    <length>255</length>
    <type>Text</type>
</CustomField>