Brain-BT/force-app/main/default/objects/Account/fields/Vendor_Meets_Insurance_Requirements__c.field-meta.xml
<CustomField>
    <fullName>Vendor_Meets_Insurance_Requirements__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Vendor Meets Insurance Requirements</label>
    <type>Checkbox</type>
</CustomField>