Brain-BT/force-app/main/default/objects/Account/fields/Vendor_Rating__c.field-meta.xml
<CustomField>
    <fullName>Vendor_Rating__c</fullName>
    <label>Vendor Rating</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Platinum</fullName>
            </value>
            <value>
                <fullName>Gold</fullName>
            </value>
            <value>
                <fullName>Silver</fullName>
            </value>
            <value>
                <fullName>Bronze</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>