Brain-BT/force-app/main/default/objects/Account/fields/Worker_s_Compensation_Expiration_Date__c.field-meta.xml
<CustomField>
    <fullName>Worker_s_Compensation_Expiration_Date__c</fullName>
    <inlineHelpText>Date the Vendor&apos;s Workers Compensation policy expires.</inlineHelpText>
    <label>Worker&apos;s Compensation Expiration Date</label>
    <type>Date</type>
</CustomField>