Brain-BT/force-app/main/default/objects/Account/fields/Worker_s_Compensation_License_Expiration__c.field-meta.xml
<CustomField>
    <fullName>Worker_s_Compensation_License_Expiration__c</fullName>
    <label>Worker&apos;s Compensation License Expiration</label>
    <type>Date</type>
</CustomField>