Brain-BT/force-app/main/default/objects/Account/fields/Year_Established__c.field-meta.xml
<CustomField>
    <fullName>Year_Established__c</fullName>
    <label>Year Established</label>
    <length>255</length>
    <type>Text</type>
</CustomField>