Brain-BT/force-app/main/default/objects/Account/fields/ZipCode__c.field-meta.xml
<CustomField>
    <fullName>ZipCode__c</fullName>
    <label>ZipCode</label>
    <length>255</length>
    <type>Text</type>
</CustomField>